# anyon-condense

./: .gitignore  CHANGELOG.md  README.md  cli.py  mypy.ini  pre-commit-config.yaml  pyproject.toml  ruff.toml  tmp_out.json
.github/workflows/: ci.yml  release-on-tag.yml
anyon_condense/: __init__.py  __main__.py  cli.py
anyon_condense/algorithms/: __init__.py
anyon_condense/core/: __init__.py  exceptions.py  hashing.py  io.py  logging.py  numdump.py  provenance.py  schema.py  utils.py
anyon_condense/pipelines/: __init__.py
anyon_condense/scalars/: __init__.py  float_backend.py  numeric_policy.py
anyon_condense/utils/: __init__.py  profiles.py
docs/: numeric_policy.md  provenance.md  schema_v0.md  trunk_workflow.md
schemas/: mfusion_input.schema.json  umtc_input.schema.json  umtc_output.schema.json
tests/examples/: Vec_Z2_mfusion.json  bad_mfusion_bad_key.json  bad_mfusion_missing_dual.json  bad_umtc_output_extra_topkey.json  bad_umtc_output_missing_provenance.json  ising_umtc_input.min.json  rep_d8_mfusion.json  toric_umtc_input.min.json  umtc_output.min.json
tests/system/: test_m2_acceptance.py
tests/unit/: test_canonical_dump.py  test_checks_tolerance_integration.py  test_cli_num.py  test_cli_num_g4.py  test_cli_skeleton.py  test_consistency_numeric_policy.py  test_consistency_report.py  test_demo_m1_smoke.py  test_demo_m2_numdump.py  test_float_backend.py  test_h1_io_schema.py  test_h2_canonical_hash.py  test_h3_logging_cli_smoke.py  test_hashing.py  test_hashing_normalized.py  (+15 more)
tools/: demo_m1.py  demo_m2_numdump.py  validate_examples.py
(+6 files in other folders)
