[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anyon-condense"
version = "0.1.0-dev"
description = "A reproducible pipeline for UMTC center, condensable algebras, and anyon condensation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

[project.urls]
Homepage = "https://example.com"

[project.scripts]
ac = "anyon_condense.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anyon_condense*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
